--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.1",
+	"id": "obsidian-dictator",
+	"name": "Obsidian Dictator",
+	"version": "0.1.0",
 	"minAppVersion": "0.12.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
+	"description": "This plugin enhances Obsidian's recording capabilities and adds MIDI access to commands.",
+	"author": "DamnedScholar",
 	"authorUrl": "https://obsidian.md",
 	"isDesktopOnly": false
 }
